# api

./: .gitignore  pyproject.toml
app/: __main__.py
app/core/: __init__.py  database.py  openai_client.py  search_model.py
app/models/: __init__.py
app/modules/algorithm/: __init__.py  candidates.py  extract_chosung.py  levenshtein_distance.py  rewrite_query.py  trie.py
app/modules/image/: __init__.py  description.py
app/routes/: image.py
migrations/models/: 0_20250622004103_init.py
